Fix crash when adding a modal operator from Python with no active window

Reported as part of #107759.